dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(JeeLabs Collector, 1.0)


AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE()

AC_PROG_CXX

dnl Libtool support
AC_LIBTOOL_DLOPEN
AC_PROG_LIBTOOL


AC_CONFIG_FILES(Makefile src/Makefile src/Channel/Makefile src/Connector/Makefile)
AC_OUTPUT

